Fix spacing mobile

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ header {
 
 #header-title {
     color: #ffffff;
+    max-width: 80%;
 }
 
 
